fixed #load css on mobile

--- a/wsgi/static/search/mobile.css
+++ b/wsgi/static/search/mobile.css
@@ -274,6 +274,17 @@ input{
     -ms-transition: opacity 0.3s ease-in-out;
     -o-transition: opacity 0.3s ease-in-out;
 }
+#load{
+    text-align: center;
+    margin-top: -35px;
+    margin-bottom: 12px;
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+    -webkit-transition: opacity 0.3s ease-in-out;
+    -moz-transition: opacity 0.3s ease-in-out;
+    -ms-transition: opacity 0.3s ease-in-out;
+    -o-transition: opacity 0.3s ease-in-out;
+}
 
 /* BETA */
 
